# calcit-clipboard

./: Cargo.toml  README.md  calcit.cirru  compact.cirru
.github/workflows/: check.yaml
src/: lib.rs
