[package]
name = "clipboard"
version = "0.0.1"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2018"

[lib]
name = "clipboard"
path = "src/lib.rs"
crate-type = ["dylib"] # Creates dynamic lib


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cirru_edn = "0.2.12"
cirru_parser = "0.1.17"
cli-clipboard = "0.2.0"